--- a/files/vm.yaml
+++ b/files/vm.yaml
@@ -28,6 +28,7 @@ spec:
         resources:
           requests:
             memory: 64M
+      dnsPolicy: Default
       networks:
       - name: default
         pod: {}
