Do base64 to make it legal to apply

--- a/source/kuul-secrets.yaml
+++ b/source/kuul-secrets.yaml
@@ -2,7 +2,8 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: kuul-secrets
+  namespace: kuul-test
 data:
-  secret1: somesecret1
-  secret2: somesecret2
-  secret3: somesecret3
+  secret1: c29tZXNlY3JldAo=
+  secret2: c29tZXNlY3JldAo=
+  secret3: c29tZXNlY3JldAo=
