Use comment so people know how to fill hostname ; match kubesprays registry pvc

--- a/kube-stack/files/registry-pvc.yaml
+++ b/kube-stack/files/registry-pvc.yaml
@@ -1,7 +1,7 @@
 kind: PersistentVolumeClaim
 apiVersion: v1
 metadata:
-  name: kube-registry-pvc
+  name: registry-pvc
   namespace: kube-system
   labels:
     kubernetes.io/cluster-service: "true"
