--- a/kube-stack/files/registry-pv.yaml
+++ b/kube-stack/files/registry-pv.yaml
@@ -20,4 +20,4 @@ spec:
         - key: kubernetes.io/hostname
           operator: In
           values:
-          - kube-stack-k8s-node-5
+          - (use 'kubectl get node' and then use one of them here; I use node-5)
